Fix "data lines" vertical spacing
From the Espresso Block Explorer Design QA document provided by Martin
Ahe.

Martin states that the data lines in the block and overview areas are supposed
to have 8px of vertical spacing.

In this case he actually means to say that the spacing between the elements
in these sections should have a vertical separation between the items of 8px.

This adjusts these values to have the correct spacing

--- a/packages/espresso-block-explorer-components/src/components/layout/summary_table_labeled_value/summary_table_labeled_value.css
+++ b/packages/espresso-block-explorer-components/src/components/layout/summary_table_labeled_value/summary_table_labeled_value.css
@@ -15,6 +15,10 @@
   color: var(--color--slate-950);
 }
 
+.summary-tabled-labeled-value:not(:nth-child(1)) {
+  margin-block-start: 8px;
+}
+
 /* Mobile */
 .summary-tabled-labeled-value {
   grid-template-columns: 1fr 1fr;
